--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ license = "GPL-3.0-or-later"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+crc = "2.1.0"
 getopt = "1.1.3"
 libc = "0.2.113"
 users = "0.11.0"
