Updated Cargo.toml file.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Łukasz Szpakowski <luckboy@vp.pl>"]
 edition = "2018"
 license = "GPL-3.0-or-later"
+description = "Rust single unix utilities in one executable."
+repository = "https://github.com/luckboy/rsubox"
+keywords = ["cli", "utility", "unix", "busybox"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
