--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ keywords = ["cli", "utility", "unix", "busybox"]
 
 [dependencies]
 crc = "2.1.0"
+fnmatch-sys = "1.0.0"
 getopt = "1.1.3"
 libc = "0.2.113"
 users = "0.11.0"
